<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.mharrer.kickapp.fragments.CoachDetailsFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/participantDetailsFirstname"
            android:text="@string/coach_details_firstname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <EditText
            android:id="@+id/editParticipantDetailsFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/participantDetailsLastname"
            android:text="@string/coach_details_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editParticipantDetailsLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/participantDetailsPhonenumber"
            android:text="@string/user_details_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editParticipantDetailsPhonenumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/participantCallButton"
                android:background="@drawable/ic_action_call"
                android:contentDescription="test"
                android:layout_marginRight="10dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/participantDetailsImage"
            android:text="@string/coach_details_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/editParticipantDetailsPhoto"
            android:onClick="dispatchTakePictureIntent"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal"
            android:gravity="right"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveParticipantDetailsButton"
                android:background="@drawable/ic_action_accept" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>